# Downfall

./: README.md  config.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  discord.rs  lib.rs  main.rs
src-tauri/src/valorant/: api.rs  connection.rs  lockfile.rs  mod.rs  types.rs
src/hooks/: useValorant.ts
src/ipc/: commands.ts
src/types/: valorant.ts
src/utils/: ranks.ts
ui/: App.tsx
ui/components/: Loading.tsx  PlayerCard.tsx  Sidebar.tsx  Titlebar.tsx
ui/pages/: Dashboard.tsx  InstaLock.tsx  LiveMatch.tsx  MapDodge.tsx  Party.tsx  Settings.tsx
ui/styles/: fonts.css  global.css
