[package]
name = "downfall"
version = "1.0.0"
authors = ["Zyhloh"]
edition = "2021"

[lib]
name = "downfall_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
futures = "0.3"
once_cell = "1"
discord-rich-presence = "1"
